update response dto and add api get info wallet, bugget
